--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+/* Nav */
 .nav{
     width: 100%;
     margin-top: 10px;
@@ -33,4 +34,18 @@
         margin-left: -5px;
     }
     
-    
+
+/* Header */
+.intro{
+    width: 100%;
+    height: 800px;                     /* Debug */
+    background-color: #b4d0e7;
+    padding-top: 5%;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
+    .introtitle{
+        font-size: 45px;
+        font-weight: bold;
+    }
