--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,60 @@
     height: 800px;                     /* Debug */
     background-color: #b4d0e7;
     padding-top: 5%;
-    padding-left: 25%;
-    padding-right: 25%;
 }
 
     .introtitle{
-        font-size: 45px;
+        font-size: 60px;
         font-weight: bold;
+        padding-left: 15%;
+        padding-right: 15%;
     }
+
+    .descrimg{
+        display: flex;
+        justify-content:center;
+        padding-left: 15%;
+        padding-right: 15%;
+        
+    }
+
+    .descrcolumn{
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        padding-top: 3%;
+        padding-right: 5%;
+    }
+
+    .introdescr{
+        font-size: 20px;
+    }
+
+    .trial{
+        margin-top: 8%;
+        padding: 3%;
+        background-color: #005aff;
+        color: #fff;
+        width: 60%;
+    }
+
+    .cancel{
+        margin-top: 8%;
+        font-size: 20px
+    }
+
+    .downarrow{
+        margin-top: 13%;
+        font-size: 40px
+    }
+
+        .introimg{
+            /* border: #000 solid 1px; */
+            background-image: url(../img/jumbo.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            width: 100%;
+            height: 500px;                   /* Debug */
+            margin-top: 3%;    
+        }
