--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,62 @@
             height: 500px;                   /* Debug */
             margin-top: 3%;    
         }
+
+
+/* Main */
+.businessplans{
+    display: flex;
+    justify-content: center;
+    /* height: 1000px; */
+    border: blueviolet solid 3px;
+    padding-top: 8%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+    .businesscontainer{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+        .businesstitle{
+            width: 100%;
+            height: fit-content;
+            font-size: 30px;
+            margin-bottom: 4%;
+        }
+
+        .payperiod{
+            font-size: 15px;
+            margin-bottom: 3%;
+        }
+
+            .month{
+                margin-right: 3%;
+            }
+
+            .selected{
+                color:#005aff;
+            }
+
+                .checkbox{
+                    margin-right: 1%;
+                    font-size: 20px;
+                }
+            
+            .cardscontainer{
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                border: #000 solid 1px;
+                height: 900px;
+            }
+
+                .card{
+                    width: calc((100% - 100px) / 3);
+                    height: 700px;
+                    border: #000 solid 1px;
+                }
+
+    
