--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
 .businessplans{
     display: flex;
     justify-content: center;
-    /* height: 1000px; */
+    height: fit-content;
     border: blueviolet solid 3px;
     padding-top: 8%;
     margin-left: 20%;
@@ -144,15 +144,15 @@
             
             .cardscontainer{
                 width: 100%;
+                height: 100%;
                 display: flex;
                 justify-content: space-between;
-                border: #000 solid 1px;
-                height: 900px;
+                /* border: #000 solid 1px; */
             }
 
                 .card{
                     width: calc((100% - 100px) / 3);
-                    height: 700px;
+                    height: 100%;
                     border: #000 solid 1px;
                     display: flex;
                     flex-direction: column;
@@ -171,11 +171,11 @@
 
                     .productcardinner{
                         width: 80%;
-                        height: 800px;          /* Debug */
+                        height: 100%;          /* Debug */
                         margin-left: 10%;
                         margin-top: 12%;
                         margin-bottom: 12%;
-                        border: red solid 1px;
+                        /* border: red solid 1px; */
                     }
 
                         .productname{
@@ -195,7 +195,8 @@
 
                         .cardinfocontainer{
                             display: flex;
-                            margin-bottom: 6%
+                            margin-top: 5%;
+                            margin-bottom: 5%
 
                         }
 
@@ -207,4 +208,21 @@
 
                             .paynow{
                                 margin-top: 8%;
+                            }
+
+                    .separator{
+                        margin-top: 15%;
+                        margin-bottom: 15%;
+                        width: 20%;
+                        border-bottom: rgba(128, 128, 128, 0.622) solid 1px;
+                    }
+
+                        .planservices{
+                          
+                            display: flex;
+                            flex-direction: column;
+                        }
+                        
+                            .tick{
+                                color: green;
                             }
