--- a/css/style.css
+++ b/css/style.css
@@ -226,3 +226,55 @@
                             .tick{
                                 color: green;
                             }
+
+            #horizontalbusiness{
+                margin-top: 2%;
+                padding-top: 0;
+            }
+                #cardhorizontal{
+                    margin-top: 0;
+                    width: 100%;
+                }
+
+                    #horizontalcardtitle{
+                        padding: 1% 0;
+                    }
+
+                    #horproductcardinner{
+                        display: flex;
+                        justify-content: space-between;
+                        margin-top: 4%;
+                        margin-bottom: 4%;
+                        height: 43px;
+                    }
+
+                    #horproductname{
+                        width: 70%;
+                    }
+
+                    .buttoncontact{
+                        width: 30%;
+                        height: 100%;
+                    }
+
+                    .horcontact{
+                        width: 80%;
+                        height: fit-content;
+                        text-align: center;
+                        background-color: #005aff;
+                        color: #fff;
+                        padding: 5% 2%;
+                    }
+
+                    .horprodinfo{
+                        width: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        margin-left: 10%;
+                        height: 0%;
+                    }
+
+                    #horinfolite{
+                        width: 50%;
+                        margin-bottom: 2%;
+                    }
