adjusting css code

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@
                     font-size: 20px;
                 }
             
+/* Cards */
             .cardscontainer{
                 width: 100%;
                 height: 100%;
