--- a/css/style.css
+++ b/css/style.css
@@ -332,3 +332,19 @@
         height: 400px;
         border: #000 solid 1px;
     }
+
+
+
+
+
+
+
+
+/* Costumers */
+#costumers{
+    flex-direction: column;
+}
+
+    #costumerstitle{
+        width: 50%;
+    }
