--- a/css/style.css
+++ b/css/style.css
@@ -386,3 +386,8 @@
                 height: 200px;
                 border: #000 solid 1px;
             }
+
+                .brandcontent{
+                    display: flex;
+                    padding: 5%;
+                }
