--- a/css/style.css
+++ b/css/style.css
@@ -329,10 +329,53 @@
 }
 
     .galleryelement{
-        width: calc((100% - 10px) / 3);
-        height: 400px;
-        border: #000 solid 1px;
+        display: flex;
+        flex-direction: column;
+        width: calc((100% - 100px) / 3);
+        height: fit-content;
+        /* border: #000 solid 1px; */
     }
+
+        .featureimg{
+            width: 100%;
+            height: 0;
+            padding: 35%;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+        }
+
+            #feature1{
+                background-image: url(../img/business-feature-switching-tools.png);
+            }
+
+            #feature2{
+                background-image: url(../img/business-feature-send-files-it.png);
+            }
+
+            #feature3{
+                background-image: url(../img/business-feature-coordinate-it.png);
+            }
+
+            #feature4{
+                background-image: url(../img/business-feature-integrations-it.png);
+            }
+
+            #feature5{
+                background-image: url(../img/business-feature-multi-device.png);
+            }
+
+            #feature6{
+                background-image: url(../img/business-feature-security.png);
+            }
+
+        .featuretitle{
+            padding-bottom: 10%;
+        }
+
+        #featuredescr{
+            margin-bottom: 0%;
+        }
 
 
 
