--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
     display: flex;
     justify-content: center;
     height: fit-content;
-    /* border: blueviolet solid 3px; */
+    border: blueviolet solid 3px;
     padding-top: 8%;
     margin-left: 20%;
     margin-right: 20%;
@@ -537,11 +537,34 @@
 /* FAQ */
 #faq{
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: fit-content;
-    margin-left: 0%;
-    margin-right: 0%;
-    padding-bottom: 8%;
-    width: 100;
+    margin: 8% 20%;
+    padding-top: 0;
 }
+
+    .faqtitle{
+        width: 100%;
+        text-align: left;
+        font-size: 35px;
+        padding-bottom: 4%;
+        font-weight: bold;
+        border-bottom: #000 solid 1px;
+    }
+
+    .faqquestion{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        text-align: left;
+        font-size: 20px;
+        font-weight: bold;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        border-bottom: #000 solid 1px;
+    }
+
+        .caret-down{
+            padding-right: 50px;
+        }
