--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,9 @@
 /* Nav */
 .nav{
     width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
+    padding-bottom: 2px
 }
 
     #navlogo{
@@ -21,11 +20,20 @@
     .navrow{
         display: flex;
         align-items: center;
+        min-height: 50px;
     }
 
         .navobject{
             margin: 0  20px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            
         }
+
+            .navobject:hover {
+                border-bottom: #000 2px solid;
+                margin-bottom: -2px;
+            }
 
     #begin{
         background-color: #005aff;
